--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,19 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Investmenting/How to analysis stocks.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "bdf6a084392269e7",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Investmenting/Companies/MP.md",
+            "file": "Trading/Futures Trading Strategy.md",
             "mode": "source",
             "source": false
           }
@@ -52,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#risk",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -81,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Investmenting/Companies/MP.md",
+                "file": "Trading/Futures Trading Strategy.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "bdf6a084392269e7",
+  "active": "37979619fb566229",
   "lastOpenFiles": [
-    "Investmenting/Companies/MP.md",
-    "Investmenting/How to analysis stocks.md",
-    "Projects/Project Ideas.md",
-    "Investmenting/Companies/Ford.md",
-    "Books/Books.md",
-    "Books/To Read.md",
-    "Projects/PPChain2 Outline.md",
-    "PPChain2 Ou.md",
-    "Projects/PPChain 2.0.md",
-    "Investmenting/Tools for stock analysis.md"
+    "Trading/Futures Trading Strategy.md",
+    "Trading/Order Book Analysis with Jigsaw.md",
+    "Accounts.md",
+    "Pre-Workout Formula.md",
+    "Trading/Paper Log.md",
+    "Books/Book Notes/The Intelligent Investor.md",
+    "Technologies/Technologies to learn.md",
+    "Untitled.md",
+    "Jigsaw Order B.md",
+    "Books/To Read.md"
   ]
 }
